~ Long PHP version is now truncated in Dashboard view
~ Better compatibility with some ancient MySQL versions
# [HIGH] Database installation errors are not communicated at installation time
# [HIGH] Panopticon database backups on Windows are empty [gh-552]
# [HIGH] Canceling causes a PHP error for some user groups [gh-583]
# [MEDIUM] Dashboard doesn't load if a site doesn't report its CMS version
# [MEDIUM] The SSL/TLS expiration task would fail on MariaDB [gh-562]
# [LOW] The default .htaccess causes the ACE Editor to throw a JavaScript console warning [gh-561]

Akeeba Panopticon 1.1.1
================================================================================
+ Send scheduled reports to specific groups [gh-521]
~ Connection doctor: detect Akeeba Backup Core for Joomla! 3
~ Improve the X-Mailer and Reply-To headers in sent emails
~ Internal support for sending email only to selected user groups
# [HIGH] Cannot launch installation due to a missing character
# [HIGH] Tasks would be picked up by multiple task runners running in parallel (MySQL race condition)
# [MEDIUM] No visible error message when the site information update fails [gh-523]
# [MEDIUM] PHPmailer throws a simple RuntimeException in some cases, which was not being caught
# [MEDIUM] Custom CLI commands in user_code where not autoloaded
# [MEDIUM] Custom tasks in user_code where not autoloaded
# [LOW] Extraneous slash in mail messages' `[URL]` variable [gh-519]
# [LOW] Joomla update failures could result in the wrong error message displayed
# [LOW] Missing or small favicons can create layout issues [gh-522]
# [LOW] Connection to Akeeba Backup reset when saving site without changing connection information [gh-534]

Akeeba Panopticon 1.1.0
================================================================================
+ Dashboard layout for Sites Overview [gh-395]
+ Scheduled Site Action Report Emails [gh-303]
+ Basic uptime monitoring [gh-491]
+ Plugin system